discussions: fix vertical alignment of discussions navbar

--- a/web/src/repo/blob/discussions/DiscussionsNavbar.scss
+++ b/web/src/repo/blob/discussions/DiscussionsNavbar.scss
@@ -1,5 +1,6 @@
 .discussions-navbar {
     display: flex;
+    align-items: center;
     padding: 0.5rem 1rem;
     border-bottom: 1px solid #212c45;
     &__title {
